--- a/psp_continuous.ipynb
+++ b/psp_continuous.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "name": "psp-continuous.ipynb",
-      "authorship_tag": "ABX9TyMbJdFM1rEkbauJBrUcJgHH",
+      "authorship_tag": "ABX9TyMj8G0IybLw2Ug0YfH8c/ht",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 1,
       "metadata": {
         "id": "8RHKO0tAnTU3"
       },
@@ -101,7 +101,7 @@
       "metadata": {
         "id": "tdI1GuMSuh_J"
       },
-      "execution_count": 42,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -497,7 +497,7 @@
       "metadata": {
         "id": "_lijIjQBukbI"
       },
-      "execution_count": 43,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -561,13 +561,13 @@
       "metadata": {
         "id": "V_YzCdl0vqRb"
       },
-      "execution_count": 44,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def simulation(sellers: List[seller1],\n",
+        "def simulation(sellers: List[Sellerr],\n",
         "                            buyers_by_seller: Dict[Seller, List[Buyer]],\n",
         "                            rounds: int = 10,\n",
         "                            interval: float = 1.0):\n",
@@ -604,10 +604,27 @@
         "        t.join()"
       ],
       "metadata": {
-        "id": "ItW-tlZdb63t"
+        "id": "ItW-tlZdb63t",
+        "outputId": "d9158643-6f36-4c3a-eea0-5ea417a32ba6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        }
       },
-      "execution_count": 45,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'seller1' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-5-1923511668.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m def simulation(sellers: List[seller1],\n\u001b[0m\u001b[1;32m      2\u001b[0m                             \u001b[0mbuyers_by_seller\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mDict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mSeller\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mBuyer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                             \u001b[0mrounds\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mint\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                             interval: float = 1.0):\n\u001b[1;32m      5\u001b[0m     \u001b[0;31m# 1) collect all buyers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'seller1' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -656,173 +673,10 @@
         "    )\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 273
-        },
-        "id": "Tt9dT4JXQZwF",
-        "outputId": "62b07030-f34b-44ec-e54f-eaf0fb0e31f3"
+        "id": "Tt9dT4JXQZwF"
       },
-      "execution_count": 48,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "<h3>Round 1 Summary</h3>\n",
-              "        <div style=\"display: flex; flex-wrap: wrap; align-items: flex-start;\">\n",
-              "            \n",
-              "            <div style=\"flex: 1; margin-right: 20px;\">\n",
-              "                <h4>Auction on seller 1</h4>\n",
-              "                <table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th>buyer</th>\n",
-              "      <th>q_i</th>\n",
-              "      <th>p_i</th>\n",
-              "      <th>alloc</th>\n",
-              "      <th>cost</th>\n",
-              "      <th>utility</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <td>1</td>\n",
-              "      <td>0.41</td>\n",
-              "      <td>1.41</td>\n",
-              "      <td>0.41</td>\n",
-              "      <td>6.55</td>\n",
-              "      <td>-6.07</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>2</td>\n",
-              "      <td>4.49</td>\n",
-              "      <td>16.18</td>\n",
-              "      <td>4.49</td>\n",
-              "      <td>0.57</td>\n",
-              "      <td>53.91</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>Winner: 2</td>\n",
-              "      <td></td>\n",
-              "      <td></td>\n",
-              "      <td></td>\n",
-              "      <td></td>\n",
-              "      <td>Pays 1.41</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "            </div>\n",
-              "        \n",
-              "            <div style=\"flex: 1; margin-right: 20px;\">\n",
-              "                <h4>Auction on seller 2</h4>\n",
-              "                <table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th>buyer</th>\n",
-              "      <th>q_i</th>\n",
-              "      <th>p_i</th>\n",
-              "      <th>alloc</th>\n",
-              "      <th>cost</th>\n",
-              "      <th>utility</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <td>3</td>\n",
-              "      <td>4.99</td>\n",
-              "      <td>14.98</td>\n",
-              "      <td>4.99</td>\n",
-              "      <td>0.00</td>\n",
-              "      <td>56.05</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>4</td>\n",
-              "      <td>0.00</td>\n",
-              "      <td>0.00</td>\n",
-              "      <td>0.00</td>\n",
-              "      <td>0.00</td>\n",
-              "      <td>0.00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>5</td>\n",
-              "      <td>0.00</td>\n",
-              "      <td>0.00</td>\n",
-              "      <td>0.00</td>\n",
-              "      <td>0.00</td>\n",
-              "      <td>0.00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>Winner: 3</td>\n",
-              "      <td></td>\n",
-              "      <td></td>\n",
-              "      <td></td>\n",
-              "      <td></td>\n",
-              "      <td>Pays 0.00</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "            </div>\n",
-              "        \n",
-              "            <div style=\"flex: 1; margin-right: 20px;\">\n",
-              "                <h4>Auction on seller 3</h4>\n",
-              "                <table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th>buyer</th>\n",
-              "      <th>q_i</th>\n",
-              "      <th>p_i</th>\n",
-              "      <th>alloc</th>\n",
-              "      <th>cost</th>\n",
-              "      <th>utility</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <td>6</td>\n",
-              "      <td>0.22</td>\n",
-              "      <td>3.26</td>\n",
-              "      <td>0.22</td>\n",
-              "      <td>6.57</td>\n",
-              "      <td>-5.89</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>7</td>\n",
-              "      <td>12.49</td>\n",
-              "      <td>29.99</td>\n",
-              "      <td>12.49</td>\n",
-              "      <td>0.72</td>\n",
-              "      <td>280.33</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>Winner: 7</td>\n",
-              "      <td></td>\n",
-              "      <td></td>\n",
-              "      <td></td>\n",
-              "      <td></td>\n",
-              "      <td>Pays 3.26</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "            </div>\n",
-              "        \n",
-              "        </div>\n",
-              "    "
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "**Global convergence after round 1.**\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
