--- a/psp_continuous.ipynb
+++ b/psp_continuous.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "name": "psp-continuous.ipynb",
-      "authorship_tag": "ABX9TyMj8G0IybLw2Ug0YfH8c/ht",
+      "authorship_tag": "ABX9TyObk2OQB6w6eWIJwZLeI1xb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -567,7 +567,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def simulation(sellers: List[Sellerr],\n",
+        "def simulation(sellers: List[Seller],\n",
         "                            buyers_by_seller: Dict[Seller, List[Buyer]],\n",
         "                            rounds: int = 10,\n",
         "                            interval: float = 1.0):\n",
@@ -605,11 +605,11 @@
       ],
       "metadata": {
         "id": "ItW-tlZdb63t",
-        "outputId": "d9158643-6f36-4c3a-eea0-5ea417a32ba6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 211
-        }
+        },
+        "outputId": "d9158643-6f36-4c3a-eea0-5ea417a32ba6"
       },
       "execution_count": 5,
       "outputs": [
