Minor print edit

--- a/psp_semret.ipynb
+++ b/psp_semret.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN0ExQKRmsKiChhA+UFpc5K",
+      "authorship_tag": "ABX9TyP9EH0IFdQh2b7QhiAGQq5s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "8RHKO0tAnTU3"
       },
@@ -82,7 +82,7 @@
       "metadata": {
         "id": "tdI1GuMSuh_J"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -341,7 +341,7 @@
       "metadata": {
         "id": "_lijIjQBukbI"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -381,12 +381,12 @@
         "\n",
         "    # 3) append summary row\n",
         "    records.append({\n",
-        "        \"Agent\":   f\"Winner: {winner}\",\n",
+        "        \"Agent\":   \"\",\n",
         "        \"q_i\":     \"\",\n",
         "        \"p_i\":     \"\",\n",
         "        \"alloc\":   \"\",\n",
         "        \"cost\":    \"\",\n",
-        "        \"utility\": f\"Pays {pay_price:.2f}\"\n",
+        "        \"utility\": \"\"\n",
         "    })\n",
         "\n",
         "    # 4) render\n",
@@ -422,7 +422,7 @@
       "metadata": {
         "id": "V_YzCdl0vqRb"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -450,9 +450,9 @@
           "height": 277
         },
         "id": "Tt9dT4JXQZwF",
-        "outputId": "4e5144ef-446a-4973-d063-f9a77a265e80"
+        "outputId": "5aa46500-692a-4932-e8d6-4910910a480d"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -478,15 +478,15 @@
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "       Agent   q_i    p_i alloc  cost    utility\n",
-              "0          A  2.98  11.97  2.98  7.56      19.24\n",
-              "1          B  1.46   5.33  0.03  0.00       0.09\n",
-              "2          C  1.98   7.18  1.98  7.67       3.61\n",
-              "3  Winner: A                           Pays 7.18"
+              "  Agent   q_i    p_i alloc  cost utility\n",
+              "0     A  2.98  11.97  2.98  7.56   19.24\n",
+              "1     B  1.46   5.33  0.03  0.00    0.09\n",
+              "2     C  1.98   7.18  1.98  7.67    3.61\n",
+              "3                                       "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b87435bf-5caa-461b-b56a-523fa610e86a\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c65f4a00-42f0-4d2c-8f05-fc08eb7d90f3\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -543,12 +543,12 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>Winner: A</td>\n",
               "      <td></td>\n",
               "      <td></td>\n",
               "      <td></td>\n",
               "      <td></td>\n",
-              "      <td>Pays 7.18</td>\n",
+              "      <td></td>\n",
+              "      <td></td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -556,7 +556,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b87435bf-5caa-461b-b56a-523fa610e86a')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c65f4a00-42f0-4d2c-8f05-fc08eb7d90f3')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -608,12 +608,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-b87435bf-5caa-461b-b56a-523fa610e86a button.colab-df-convert');\n",
+              "        document.querySelector('#df-c65f4a00-42f0-4d2c-8f05-fc08eb7d90f3 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-b87435bf-5caa-461b-b56a-523fa610e86a');\n",
+              "        const element = document.querySelector('#df-c65f4a00-42f0-4d2c-8f05-fc08eb7d90f3');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -633,8 +633,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-e514c294-740c-451c-bc1e-22d2328ceb26\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e514c294-740c-451c-bc1e-22d2328ceb26')\"\n",
+              "    <div id=\"df-3614cce8-2475-4335-8e81-c43eea0553f4\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3614cce8-2475-4335-8e81-c43eea0553f4')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -753,7 +753,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-e514c294-740c-451c-bc1e-22d2328ceb26 button');\n",
+              "            document.querySelector('#df-3614cce8-2475-4335-8e81-c43eea0553f4 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -765,7 +765,7 @@
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "summary": "{\n  \"name\": \"    run_simulation(agents, server, rounds=10, delay=0\",\n  \"rows\": 4,\n  \"fields\": [\n    {\n      \"column\": \"Agent\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 4,\n        \"samples\": [\n          \"B\",\n          \"Winner: A\",\n          \"A\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"q_i\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 4,\n        \"samples\": [\n          \"1.46\",\n          \"\",\n          \"2.98\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"p_i\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 4,\n        \"samples\": [\n          \"5.33\",\n          \"\",\n          \"11.97\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"alloc\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 4,\n        \"samples\": [\n          \"0.03\",\n          \"\",\n          \"2.98\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"cost\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 4,\n        \"samples\": [\n          \"0.00\",\n          \"\",\n          \"7.56\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"utility\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 4,\n        \"samples\": [\n          \"0.09\",\n          \"Pays 7.18\",\n          \"19.24\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"    run_simulation(agents, server, rounds=10, delay=0\",\n  \"rows\": 4,\n  \"fields\": [\n    {\n      \"column\": \"Agent\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 4,\n        \"samples\": [\n          \"B\",\n          \"\",\n          \"A\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"q_i\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 4,\n        \"samples\": [\n          \"1.46\",\n          \"\",\n          \"2.98\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"p_i\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 4,\n        \"samples\": [\n          \"5.33\",\n          \"\",\n          \"11.97\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"alloc\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 4,\n        \"samples\": [\n          \"0.03\",\n          \"\",\n          \"2.98\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"cost\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 4,\n        \"samples\": [\n          \"0.00\",\n          \"\",\n          \"7.56\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"utility\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 4,\n        \"samples\": [\n          \"0.09\",\n          \"\",\n          \"19.24\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {}
@@ -809,13 +809,13 @@
       ],
       "metadata": {
         "id": "dfEOiGccBd_f",
-        "outputId": "cbc409c5-5253-4735-c744-30d72985bab1",
+        "outputId": "8c7d43c7-eee5-49fc-b35c-1ccbf3efe186",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 254
         }
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -847,7 +847,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-81706331-2d59-49cc-90d7-3be581511053\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-252ab5bd-0496-4a72-9524-75b36ae6417f\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -914,7 +914,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-81706331-2d59-49cc-90d7-3be581511053')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-252ab5bd-0496-4a72-9524-75b36ae6417f')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -966,12 +966,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-81706331-2d59-49cc-90d7-3be581511053 button.colab-df-convert');\n",
+              "        document.querySelector('#df-252ab5bd-0496-4a72-9524-75b36ae6417f button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-81706331-2d59-49cc-90d7-3be581511053');\n",
+              "        const element = document.querySelector('#df-252ab5bd-0496-4a72-9524-75b36ae6417f');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -991,8 +991,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-cc230e8e-f1d2-4e8d-aae3-ff3469814a0e\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-cc230e8e-f1d2-4e8d-aae3-ff3469814a0e')\"\n",
+              "    <div id=\"df-4d40434d-b6f9-43af-a37f-4673aae11426\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4d40434d-b6f9-43af-a37f-4673aae11426')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1111,14 +1111,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-cc230e8e-f1d2-4e8d-aae3-ff3469814a0e button');\n",
+              "            document.querySelector('#df-4d40434d-b6f9-43af-a37f-4673aae11426 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_d119a825-9bd1-4ced-bef6-fbc02d49eec8\">\n",
+              "  <div id=\"id_13807ed2-e0e2-4fe4-9e8b-b777bed0da70\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -1162,7 +1162,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_d119a825-9bd1-4ced-bef6-fbc02d49eec8 button.colab-df-generate');\n",
+              "        document.querySelector('#id_13807ed2-e0e2-4fe4-9e8b-b777bed0da70 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
