Changes need to stay now

--- a/psp_discrete_networked.ipynb
+++ b/psp_discrete_networked.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "name": "psp-discrete-networked.ipynb",
-      "authorship_tag": "ABX9TyMjoM9Hf5sjvXSGqVoNZ6WS",
+      "authorship_tag": "ABX9TyPzuNw0rha0SoTohMzBXKzP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "8RHKO0tAnTU3"
       },
@@ -101,7 +101,7 @@
       "metadata": {
         "id": "tdI1GuMSuh_J"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -263,7 +263,7 @@
         "        # Evaluate feasibility at each candidate z\n",
         "        for z in candidates:\n",
         "            price = self.theta_i_prime(z)\n",
-        "            if z <= self.Q_i(price, s_hat_minus) and self.cost_at_z(z, s_hat_minus) <= self.b_i:\n",
+        "            if z <= self.Q_i(price, s_hat_minus) and self.cost(z, s_hat_minus) <= self.b_i:\n",
         "                best_z = z\n",
         "        return best_z\n",
         "\n",
@@ -322,47 +322,6 @@
         "\n",
         "    def P_i(self,\n",
         "            z: float,\n",
-        "            s_hat_minus: Dict[str, Tuple[float,float]]) -> float:\n",
-        "        \"\"\"\n",
-        "        Price density function:\n",
-        "\n",
-        "            P_i(z; ŝ_{-i}) = inf { y ≥ 0 : Q_i(y; ŝ_{-i}) ≥ z }.\n",
-        "\n",
-        "        We sample candidate prices (0 and all opponents' p_j),\n",
-        "        and return the smallest y meeting Q_i(y) ≥ z,\n",
-        "        but realized as a staircase, i.e. for a given z,\n",
-        "        which price slice are we in?\n",
-        "        \"\"\"\n",
-        "        cumulative = 0.0\n",
-        "        for qj, pj in sorted(s_hat_minus.values(), key=lambda x: x[1], reverse=True):\n",
-        "            cumulative += qj\n",
-        "            if z <= cumulative:\n",
-        "                return pj\n",
-        "        # if z exceeds all opponent‐slices, price = 0\n",
-        "        return 0.0\n",
-        "\n",
-        "    def integral_P(self,\n",
-        "                   z: float,\n",
-        "                   s_hat_minus: Dict[str, Tuple[float, float]]) -> float:\n",
-        "        \"\"\"Compute\n",
-        "\n",
-        "        ∫₀ᶻ P_i(ζ, ŝ_{-i}) dζ via simple trapezoidal rule.\n",
-        "\n",
-        "                where:\n",
-        "          - z = allocation to i under PSP (infinitely divisible),\n",
-        "\n",
-        "          - P_i(z; ŝ_{-i}) = inf{y ≥ 0 : Q_i(y; ŝ_{-i}) ≥ z}.\n",
-        "        \"\"\"\n",
-        "        N = 100  # increase resolution for accuracy\n",
-        "        zs = np.linspace(0, z, N + 1)\n",
-        "        Ps = [self.P_i(z, s_hat_minus) for z in zs]\n",
-        "        # trapezoidal rule: sum((P[k] + P[k+1]) / 2 * dz)\n",
-        "        dz = z / N\n",
-        "        total = sum((Ps[k] + Ps[k+1]) * 0.5 for k in range(N)) * dz\n",
-        "        return total\n",
-        "\n",
-        "    def P_i(self,\n",
-        "            z: float,\n",
         "            s_hat_minus: Dict[str, Tuple[float, float]]) -> float:\n",
         "        \"\"\"\n",
         "        Price density function:\n",
@@ -392,7 +351,7 @@
         "        \"\"\"\n",
         "        # how much you get\n",
         "        a = self.a_i(s_i, s_hat_minus)\n",
-        "        return cost(z, s_hat_minus)\n",
+        "        return self.cost(a, s_hat_minus)\n",
         "\n",
         "    def cost(self,\n",
         "            z: float,\n",
@@ -413,25 +372,6 @@
         "            cost += take * price\n",
         "            consumed += take\n",
         "        return cost\n",
-        "\n",
-        "    def c_i_old(self,\n",
-        "            s_i: Tuple[float, float],\n",
-        "            s_hat_minus: Dict[str, Tuple[float, float]]) -> float:\n",
-        "        \"\"\"\n",
-        "        Cost under progressive allocation:\n",
-        "\n",
-        "            c_i(s) = ∫₀^{a_i(s)} P_i(z; ŝ_{-i}) dz\n",
-        "\n",
-        "        where:\n",
-        "          - a_i(s) = allocation to i under PSP (infinitely divisible),\n",
-        "          - P_i(z; ŝ_{-i}) = inf{y ≥ 0 : Q_i(y; ŝ_{-i}) ≥ z}.\n",
-        "\n",
-        "        We compute this via a trapezoidal rule over N steps.\n",
-        "        \"\"\"\n",
-        "        # Determine allocation\n",
-        "        a = self.a_i(s_i, s_hat_minus)\n",
-        "        # Numerically integrate P_i from 0 to a\n",
-        "        return self.integral_P(a, s_hat_minus)\n",
         "\n",
         "    def u_i(self,\n",
         "            s_i: Tuple[float, float],\n",
@@ -476,7 +416,7 @@
       "metadata": {
         "id": "_lijIjQBukbI"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -540,13 +480,13 @@
       "metadata": {
         "id": "V_YzCdl0vqRb"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def simulation(sellers: List[seller1],\n",
+        "def simulation(sellers: List[Seller],\n",
         "                            buyers_by_seller: Dict[Seller, List[Buyer]],\n",
         "                            rounds: int = 10,\n",
         "                            interval: float = 1.0):\n",
@@ -585,7 +525,7 @@
       "metadata": {
         "id": "ItW-tlZdb63t"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -640,9 +580,9 @@
           "height": 273
         },
         "id": "Tt9dT4JXQZwF",
-        "outputId": "62b07030-f34b-44ec-e54f-eaf0fb0e31f3"
+        "outputId": "605c55fe-d7ea-4b27-d7e1-5415e389cfde"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "display_data",
@@ -670,27 +610,27 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <td>1</td>\n",
-              "      <td>0.41</td>\n",
-              "      <td>1.41</td>\n",
-              "      <td>0.41</td>\n",
-              "      <td>6.55</td>\n",
-              "      <td>-6.07</td>\n",
+              "      <td>4.90</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>4.90</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>1.50</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>2</td>\n",
-              "      <td>4.49</td>\n",
-              "      <td>16.18</td>\n",
-              "      <td>4.49</td>\n",
-              "      <td>0.57</td>\n",
-              "      <td>53.91</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>0.00</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <td>Winner: 2</td>\n",
+              "      <td>Winner: 1</td>\n",
               "      <td></td>\n",
               "      <td></td>\n",
               "      <td></td>\n",
               "      <td></td>\n",
-              "      <td>Pays 1.41</td>\n",
+              "      <td>Pays 0.00</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -712,11 +652,11 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <td>3</td>\n",
-              "      <td>4.99</td>\n",
-              "      <td>14.98</td>\n",
-              "      <td>4.99</td>\n",
+              "      <td>7.99</td>\n",
               "      <td>0.00</td>\n",
-              "      <td>56.05</td>\n",
+              "      <td>7.99</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>56.25</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>4</td>\n",
@@ -762,27 +702,27 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <td>6</td>\n",
-              "      <td>0.22</td>\n",
-              "      <td>3.26</td>\n",
-              "      <td>0.22</td>\n",
-              "      <td>6.57</td>\n",
-              "      <td>-5.89</td>\n",
+              "      <td>19.97</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>19.97</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>11.25</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>7</td>\n",
-              "      <td>12.49</td>\n",
-              "      <td>29.99</td>\n",
-              "      <td>12.49</td>\n",
-              "      <td>0.72</td>\n",
-              "      <td>280.33</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>0.00</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <td>Winner: 7</td>\n",
+              "      <td>Winner: 6</td>\n",
               "      <td></td>\n",
               "      <td></td>\n",
               "      <td></td>\n",
               "      <td></td>\n",
-              "      <td>Pays 3.26</td>\n",
+              "      <td>Pays 0.00</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
